aws/resources/vpc/wo-module/subnet.tf
resource "aws_subnet" "public_subnets" {
 count      = length(var.public_subnet_cidrs)
 vpc_id     = aws_vpc.vpc.id
 cidr_block = element(var.public_subnet_cidrs, count.index)
 availability_zone = element(var.azs, count.index)
 tags = {
   Name = "${var.project}-${var.env}_public_subnet-${count.index + 1}"
 }
}
 
resource "aws_subnet" "private_subnets" {
 count      = length(var.private_subnet_cidrs)
 vpc_id     = aws_vpc.vpc.id
 cidr_block = element(var.private_subnet_cidrs, count.index)
 availability_zone = element(var.azs, count.index)
 tags = {
   Name = "${var.project}-${var.env}_private_subnet-${count.index + 1}"
 }
}

resource "aws_subnet" "data_subnets" {
 count      = length(var.data_subnet_cidrs)
 vpc_id     = aws_vpc.vpc.id
 cidr_block = element(var.data_subnet_cidrs, count.index)
 availability_zone = element(var.azs, count.index)
 tags = {
   Name = "${var.project}-${var.env}_data_subnet-${count.index + 1}"
 }
}
